<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">MinttiSdkDemo</string>
    <string name="base_activity" tools:ignore="MissingTranslation">BaseActivity</string>
    <string name="start_scan">Start scan</string>
    <string name="stop_scan">Stop scan</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="echo_mode">"Auscultation mode : "</string>
    <string name="heart_rate">"Heart rate : "</string>
    <string name="power">"Power : "</string>
    <string name="start_receive_data">Receive data</string>
    <string name="stop_receive_data">Stop receive</string>
    <string name="switch_mode">Switch mode</string>
    <string name="mac_address_empty">device address empty</string>
    <string name="ble_connect_failed">Connect failed</string>
    <string name="ble_connecting">Connecting</string>
    <string name="ble_update_params">Updating parameters</string>
    <string name="ble_update_params_failed">Parameter update failed</string>
    <string name="ble_enable_bluetooth">Please turn on Bluetooth first</string>
    <string name="ble_device_not_connect">device not connected</string>
    <string name="firmware_update">Firmware update</string>
    <string name="disconnect_first">Disconnect first</string>
</resources>
